force-app/main/default/objects/ResponseElement__c/ResponseElement__c.object-meta.xml
<CustomObject>
    <label>Response Element</label>
    <nameField>
        <displayFormat>RE-{00000}</displayFormat>
        <label>Response Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>