force-app/main/default/objects/ResponseElement__c/fields/Element_Version__c.field-meta.xml
<CustomField>
    <fullName>Element_Version__c</fullName>
    <label>Element Version</label>
    <referenceTo>ElementVersion__c</referenceTo>
    <relationshipLabel>Elements</relationshipLabel>
    <relationshipName>Elements</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>