force-app/main/default/objects/ResponseElement__c/fields/ElementVersion__c.field-meta.xml
<CustomField>
    <fullName>ElementVersion__c</fullName>
    <label>Element Version</label>
    <referenceTo>ElementVersion__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>